# zenith

.github/workflows/: pull_request.yml
client/: .prettierignore  .prettierrc  drizzle.config.ts  eslint.config.js  package.json  svelte.config.js  vite.config.js
client/src/: app.d.ts  app.html  svg.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: android.rs  crypto.rs  keyring.rs  lib.rs
client/src/lib/: auth.ts  client.ts  config.ts  constants.ts  routing.ts  themes.ts
client/src/lib/db/: migrate.ts  sqlite.ts
client/src/lib/machines/: index.ts
client/src/lib/persistance/: settings.ts  vault.ts
client/src/lib/stores/: conversations.svelte.ts  friendRequests.svelte.ts  messages.svelte.ts
client/src/lib/utils/: api.ts  auth.ts  crypto.ts  zodSchemas.ts
client/src/lib/zod/: schemas.ts
client/src/routes/: +layout.svelte  +page.svelte  layout.css
client/src/routes/theme/: +page.svelte
server/: .env.template  Dockerfile  biome.json  docker-compose.yml  drizzle.config.ts  package.json
server/drizzle/: 0000_swift_wild_child.sql  0001_optimal_speed.sql  0002_numerous_random.sql  0003_true_multiple_man.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
server/src/: cluster.ts  env.ts  globals.d.ts  index.ts
server/src/db/: model.ts  pg.ts  redis.ts  utils.ts
server/src/lib/: auth.ts  tools.ts
server/src/routes/: index.ts
server/src/ws/: index.ts  types.ts
(+36 files in other folders)
